<resources>
    <string name="app_name">TraCuuNhanKhau</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Tìm Kiếm Nhân Khẩu</string>
    <string name="nav_header_detail">Giáo viên hướng dẫn: Hồ Diên Lợi</string>
    <string name="nav_item_search">Tìm kiếm</string>
    <string name="nav_item_list">Danh sách nhân khẩu</string>
    <string name="nav_item_history">Lịch sử tìm kiếm</string>
    <string name="search_label">Tìm kiếm nhân khẩu</string>
    <string name="search_hint">Nhập từ khóa tìm kiếm</string>
    <string name="acbar_delete_history">Xóa lịch sử</string>
    <string name="acbar_filter">Lọc theo chữ cái</string>

    <!--test-->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="string_year_birth"><b>Năm Sinh: </b> %1$s</string>
    <string name="string_place_birth"><b>Địa Chỉ: </b> %1$s </string>
    <string name="string_mess_loading">Đang khởi tạo dữ liệu</string>
    <string name="string_search_help">Bạn có thể tìm kiếm với tên gần đúng với từ tiếng việt không dấu \n
        Vd: Trần Trọng Hiến tìm kiếm là \"hien\"</string>
    <string name="string_history_help">Bạn chưa xem bất cứ thông tin nào </string>
    <string name="string_fullname">Trần Trọng Hiến</string>
    <string name="acbar_refresh">refresh list</string>
    <string name="acbar_page_list">Trang %1$s</string>

    <string name="string_detail_yearbirth">Năm Sinh: %1$s </string>
    <string name="string_detail_cmnd">Số CM: %1$s</string>
    <string name="string_detail_placebirth">Quê Quán: %1$s</string>
    <string name="string_detail_religion">Tôn Giáo: %1$s</string>
    <string name="string_detail_job">Nghề Nghiệp: %1$s</string>
    <string name="string_detail_node">Ghi Chú: %1$s</string>
    <string name="string_detail_status">Trang thái: %1$s</string>

    <string name="string_title_dialog_change_page">Thay đổi trang</string>
    <string name="string_mes_dialog_change_page">Bạn có chắc chắn muốn sang trang khác ?</string>
    <string name="dialog_yes">Đồng Ý</string>
    <string name="dialog_no">Không</string>
    <string name="string_title_dialog_del_history">Xóa Lịch Sử</string>
    <string name="string_mes_dialog_del_history">Bạn muốn xóa lịch sử đã xem ?</string>
    <string name="string_date_seen">đã xem</string>

</resources>
