<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        app:actionViewClass="com.it.hientran.tracuunhankhau.customview.MySearchView"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_delete_history"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/acbar_delete_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next_page"
        android:orderInCategory="100"
        android:title="@string/acbar_page_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sorting"
        android:icon="@drawable/ic_action_sorting"
        android:orderInCategory="100"
        android:title="@string/acbar_refresh"
        app:showAsAction="always" />




</menu>